# status-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .stestr.conf  .stestr_websocket.conf  CONTRIBUTING.md  Dockerfile  README.md  alchemy.py  configs.py  dump.rdb  example.sqlite  removed_code.htm  requirements.txt  setup.cfg  setup.py  status_dashboard.py  test-requirements.txt  tox.ini  zuul.yaml
.stestr/: 0  times.dbm.bak
app/: __init__.py  authorization.py  cli.py  default_settings.py  models.py  websocket.py
app/api/: __init__.py  authorization.py  routes.py
app/datetime/: __init__.py
app/exporter/: __init__.py  metrics.py  requests.py  routes.py
app/rss/: __init__.py  routes.py
app/templates/: _region_cards.html  base.html  create_incident.html  css.html  footer.html  header.html  incident.html  index.html  tabs.html
app/web/: __init__.py  forms.old.py  forms.py  routes.old.py  routes.py
app/websocket/: __init__.py  routes.py
doc/: requirements.txt
doc/source/: api.rst  auth.rst  conf.py  config.rst  customizing.rst  deployment.rst  exporter.rst  index.rst  rss.rst  websocket.rst
migrations/: env.py
migrations/versions/: 14621c95e3ee_add_system_column_to_incident_model.py  28bcb1d72583_.py  2f9c5ad489b9_initial_version.py  347e8c39fd1b_convert_to_declarative_model.py  34f7ab360a3a_convert_impact.py  3c893bcfb35b_.py  61e73167c986_.py  8cc59d7a05b8_index_added_models.py  964240faa5a5_.py  c2d47c8fca82_.py  (+1 more)
test_values/: alchemy.py  cat_names.py  example.sqlite  removed
websocket/: Dockerfile  requirements.txt
websocket/app/: server.py
(+35 files in other folders)
