[metadata]
name = status_dashboard
summary = Status Dashboard
description_file =
    README.md
author = OTC Team
python_requires = >=3.7
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[pbr]
warnerrors = True

[entry_points]
#console_scripts =
#    scheduler = apimon.cmd.scheduler:main
#    executor = apimon.cmd.executor:main
#    epmon = apimon.cmd.epmon:main

